--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/pensionatDB
 spring.datasource.username=dbUser2024
 spring.datasource.password=secretPassword
+server.error.path=/error
