Skapat 3 st integrationsTest under mappen IT , som vi kan köra igång genom Gradel-->Verification-->integration Test

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=password
 # H2 Console Configuration (Optional)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+Spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
