--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,25 @@
 spring.application.name=Pensionat
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/pensionatDB
 spring.datasource.username=dbUser2024
 spring.datasource.password=secretPassword
 server.error.path=/error
+
+
+#spring.security.oauth2.client.registration.github.client-id=Ov23liKzVATkMiLVTmMu
+#spring.security.oauth2.client.registration.github.client-secret=4c3d2b21c3354992427b21e6807eb2f7f03c09af
+
+spring.mail.host=smtp.ethereal.email
+spring.mail.port=587
+spring.mail.username=sarai47@ethereal.email
+spring.mail.password=mYX3NMu4pUCxFrwpx1
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.show-sql=true
+spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
