--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-
+spring.config.import=optional:file:.env[.properties]
 
 spring.application.name=Pensionat
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/pensionatDB
-spring.datasource.username=dbUser2024
-spring.datasource.password=secretPassword
 server.error.path=/error
 
 
