--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -22,3 +22,7 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.show-sql=true
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
+
+integrations.contractcustomer.url=https://javaintegration.systementor.se/customers
+integrations.blacklist.url=https://javabl.systementor.se/api/stefan/blacklist
+integrations.shipper.url=https://javaintegration.systementor.se/shippers
