--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -27,6 +27,8 @@ spring.jpa.show-sql=true
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
 
+spring.queue.queuename=3b009a69-8ab6-4437-a13a-cfc9c4069067
+
 integrations.contractcustomer.url=https://javaintegration.systementor.se/customers
 integrations.blacklist.url=https://javabl.systementor.se/api/stefan/blacklist
 integrations.shipper.url=https://javaintegration.systementor.se/shippers
