added lots of progress toward making htmlMailTemplate-logic work

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -19,3 +19,11 @@ spring.mvc.view.suffix=.html
 integrations.contractcustomer.url=https://javaintegration.systementor.se/customers
 integrations.blacklist.url=https://javabl.systementor.se/api/stefan/blacklist
 integrations.shipper.url=https://javaintegration.systementor.se/shippers
+
+confirmation.mail.show-room-number=true
+confirmation.mail.show-date=true
+confirmation.mail.show-num-of-beds=true
+confirmation.mail.show-total-price=true
+confirmation.mail.show-name=false
+confirmation.mail.show-phone-number=true
+confirmation.mail.show-email=true
